# ek86317a-programmer

./: README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build-tauri.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/bridges/: i2c.rs  mod.rs
src-tauri/src/bridges/ch347f/: i2c.rs  mod.rs
src-tauri/src/bridges/ft232h/: i2c.rs  mod.rs
src-tauri/src/commands/: device.rs  eeprom.rs  firmware.rs  mod.rs  register.rs
src-tauri/src/ek86317a/: firmware.rs  mod.rs  protocol.rs  registers.rs
src-tauri/src/ft232h/: i2c.rs  mod.rs
src-tauri/src/pmu/: chip.rs  device.rs  firmware.rs  mod.rs
src-tauri/src/pmu/commands/: device.rs  eeprom.rs  firmware.rs  mod.rs  register.rs
src-tauri/src/pmu/ek86317a/: mod.rs  protocol.rs
src-tauri/src/pmu/iml8947k/: mod.rs  registers.rs
src-tauri/src/pmu/lp6281/: mod.rs  registers.rs
src/components/: LogPanel.tsx  Toolbar.tsx
src/components/config/: BitField.tsx  ConfigTab.tsx  RegisterPanel.tsx
src/components/fault/: FaultTab.tsx
src/components/gamma/: GammaRow.tsx  GammaTab.tsx
src/components/voltage/: Vcom1Complex.tsx  VoltageRow.tsx  VoltageTab.tsx
src/hooks/: useDevice.ts  useLog.ts  useRegisters.ts
src/lib/: chips.ts  register-map.ts  tauri-commands.ts  voltage-calc.ts
