[package]
name = "ek86317a-programmer"
version = "0.1.0"
description = "EK86317A TCON Programmer via FT232H I2C"
authors = ["you"]
edition = "2021"

[lib]
name = "ek86317a_programmer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
libftd2xx = { version = "0.32", features = ["static"], optional = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
ft232h = ["libftd2xx"]
ch347f = []
all-bridges = ["ft232h", "ch347f"]

[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.8"
